--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ ELSE(wxWidgets_FOUND)
     message("wxWidgets not found!!!!!!!!!")
 ENDIF(wxWidgets_FOUND)
 
-add_executable(ImageSearcher main.cpp ui/frame.cpp data/tinyxml2.cpp ui/ImagePanel.cpp ui/ImagePanel.hpp)
+add_executable(ImageSearcher main.cpp ui/frame.cpp data/tinyxml2.cpp ui/ImagePanel.cpp ui/ImagePanel.hpp data/XmlConfig.cpp data/XmlConfig.hpp)
 target_link_libraries(ImageSearcher ${wxWidgets_LIBRARIES})
 
