--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(SRC_DETECTION ui/detection/DetectionFrame.hpp ui/detection/DetectionFrame.cp
 set(SRC_SEGMENTATION ui/segmentation/SegmentationFrame.cpp ui/segmentation/SegmentationFrame.hpp ui/segmentation/SegmentationInfoBox.cpp ui/segmentation/SegmentationInfoBox.hpp ui/segmentation/SegmentationToolBar.cpp ui/segmentation/SegmentationToolBar.hpp ui/segmentation/HelpDialog.cpp ui/segmentation/HelpDialog.hpp)
 set(SRC_COMPONENTS ui/component/FileExplorer.hpp ui/component/FileExplorer.cpp ui/component/ImagePanel.hpp ui/component/ImagePanel.cpp)
 set(SRC_DATA data/tinyxml2.h data/tinyxml2.cpp data/XmlConfig.hpp data/XmlConfig.cpp data/ThemeData.hpp data/EventData.cpp data/EventData.hpp)
-set(SRC_SETTING ui/settings/SettingFrame.cpp ui/settings/SettingFrame.hpp ui/settings/SettingPanelManager.cpp ui/settings/SettingPanelManager.hpp ui/settings/GeneralSetting.cpp ui/settings/GeneralSetting.hpp ui/settings/NameBoxSetting.cpp ui/settings/NameBoxSetting.hpp)
+set(SRC_SETTING ui/settings/SettingFrame.cpp ui/settings/SettingFrame.hpp ui/settings/SettingPanelManager.cpp ui/settings/SettingPanelManager.hpp ui/settings/GeneralSetting.cpp ui/settings/GeneralSetting.hpp ui/settings/NameBoxSetting.cpp ui/settings/NameBoxSetting.hpp data/FebsID.hpp data/FebsStruture.hpp)
 
 add_executable(FepsTool ${SRC_BASE} ${SRC_COMPONENTS} ${SRC_DATA} ${SRC_DETECTION} ${SRC_SEGMENTATION} ${SRC_SETTING})
 target_link_libraries(FepsTool ${wxWidgets_LIBRARIES})
