--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SRC_DETECTION ui/detection/DetectionFrame.hpp ui/detection/DetectionFrame.cp
 set(SRC_SEGMENTATION ui/segmentation/SegmentationFrame.cpp ui/segmentation/SegmentationFrame.hpp ui/segmentation/SegmentationInfoBox.cpp ui/segmentation/SegmentationInfoBox.hpp ui/segmentation/SegmentationToolBar.cpp ui/segmentation/SegmentationToolBar.hpp ui/segmentation/HelpDialog.cpp ui/segmentation/HelpDialog.hpp)
 set(SRC_MANAGER ui/filemanager/FileManagerFrame.hpp ui/filemanager/FileManagerFrame.cpp ui/filemanager/ManagerControlBox.hpp ui/filemanager/ManagerControlBox.cpp ui/filemanager/ManagerPanel.hpp ui/filemanager/ManagerPanel.cpp)
 set(SRC_COMPONENTS ui/component/FileExplorer.hpp ui/component/FileExplorer.cpp ui/component/ImagePanel.hpp ui/component/ImagePanel.cpp)
-set(SRC_DATA data/tinyxml2.h data/tinyxml2.cpp data/XmlConfig.hpp data/XmlConfig.cpp data/ThemeData.hpp data/EventData.cpp data/EventData.hpp)
+set(SRC_DATA data/tinyxml2.h data/tinyxml2.cpp data/XmlConfig.hpp data/XmlConfig.cpp data/ThemeData.hpp data/EventData.cpp data/EventData.hpp data/KeyboardInputManager.cpp data/KeyboardInputManager.hpp)
 set(SRC_SETTING ui/settings/SettingFrame.cpp ui/settings/SettingFrame.hpp ui/settings/SettingPanelManager.cpp ui/settings/SettingPanelManager.hpp ui/settings/GeneralSetting.cpp ui/settings/GeneralSetting.hpp ui/settings/NameBoxSetting.cpp ui/settings/NameBoxSetting.hpp data/FebsID.hpp data/FebsStruture.hpp ui/settings/KeyBindSetting.cpp ui/settings/KeyBindSetting.hpp)
 set(ETC ETC/RunningTimeChecker.hpp ETC/RunningTimeChecker.cpp)
 
